--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/client/pages/Index.tsx"></script>
+    <script type="module" src="/client/App.tsx"></script>
   </body>
 </html>
